beggining of mybooks

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -7,8 +7,9 @@
       </div>
 
       <div class="item item-text-wrap" style="height: 200px;">
-        <img src="../img/my-books.jpg" height="auto" width="100%" />
-        <!-- TODO: colocar ação que leva para a respectiva tela -->
+        <a href="#/app/mybooks">
+          <img src="../img/my-books.jpg" height="auto" width="100%"/>
+        </a>
       </div>
 
     </div>
@@ -19,7 +20,9 @@
       </div>
 
       <div class="item item-text-wrap" style="height: 200px;">
-        <img src="../img/library.png" height="auto" width="100%" />
+        <a href="#/app/newbooks">
+          <img src="../img/library.png" height="auto" width="100%"/>
+        </a>
       </div>
     </div>
 
