--- a/www/templates/newbooks.html
+++ b/www/templates/newbooks.html
@@ -1,6 +1,69 @@
 <ion-view view-title="New Books">
-  <ion-nav-buttons side="secondary">
-  </ion-nav-buttons>
   <ion-content>
+
+    <div class="row">
+
+      <div class="col" style="height: 240px;">
+
+        <div class="list card">
+
+          <div class="item item-image">
+            <img src="../img/series.png" height="144px" width="144px;"/>
+          </div>
+          <a class="item assertive" href="#">
+            Series
+          </a>
+
+        </div>
+
+
+      </div>
+
+      <div class="col" style="height: 240px;">
+
+        <div class="list card">
+
+          <div class="item item-image">
+            <img src="../img/authors.png" height="144px" width="144px;"/>
+          </div>
+          <a class="item assertive" href="#">
+            Authors
+          </a>
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
+      <div class="col" style="height: 240px;">
+
+        <div class="list card">
+
+          <div class="item item-image">
+            <img src="../img/authors.png" height="144px" width="144px;"/>
+          </div>
+          <a class="item assertive" href="#">
+            Categories
+          </a>
+
+        </div>
+      </div>
+      <div class="col" style="height: 240px;">
+
+        <div class="list card">
+
+          <div class="item item-image">
+            <img src="../img/authors.png" height="144px" width="144px;"/>
+          </div>
+          <a class="item assertive" href="#">
+            Sugestions
+          </a>
+
+        </div>
+      </div>
+    </div>
+
+
   </ion-content>
 </ion-view>
