--- a/www/templates/newbooks.html
+++ b/www/templates/newbooks.html
@@ -3,6 +3,38 @@
 
     <div class="row">
 
+
+      <div class="col" style="height: 240px;">
+
+        <div class="list card">
+
+          <div class="item item-image">
+            <img src="../img/authors.png" height="144px" width="144px;"/>
+          </div>
+          <a class="item assertive" href="#/app/search/author">
+            Author
+          </a>
+
+        </div>
+      </div>
+
+      <div class="col" style="height: 240px;">
+
+        <div class="list card">
+
+          <div class="item item-image">
+            <img src="../img/authors.png" height="144px" width="144px;"/>
+          </div>
+          <a class="item assertive" href="#/app/search/category">
+            Category
+          </a>
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row">
       <div class="col" style="height: 240px;">
 
         <div class="list card">
@@ -10,7 +42,7 @@
           <div class="item item-image">
             <img src="../img/series.png" height="144px" width="144px;"/>
           </div>
-          <a class="item assertive" href="#">
+          <a class="item assertive">
             Series
           </a>
 
@@ -26,37 +58,7 @@
           <div class="item item-image">
             <img src="../img/authors.png" height="144px" width="144px;"/>
           </div>
-          <a class="item assertive" href="#">
-            Authors
-          </a>
-
-        </div>
-      </div>
-
-    </div>
-
-    <div class="row">
-      <div class="col" style="height: 240px;">
-
-        <div class="list card">
-
-          <div class="item item-image">
-            <img src="../img/authors.png" height="144px" width="144px;"/>
-          </div>
-          <a class="item assertive" href="#">
-            Categories
-          </a>
-
-        </div>
-      </div>
-      <div class="col" style="height: 240px;">
-
-        <div class="list card">
-
-          <div class="item item-image">
-            <img src="../img/authors.png" height="144px" width="144px;"/>
-          </div>
-          <a class="item assertive" href="#">
+          <a class="item assertive">
             Sugestions
           </a>
 
